# marketmaker

./: .gitignore  CHANGELOG.md  LICENSE-3P.txt  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: Blueprints.md  Developer.md  EnvVars.md  Extensions.md  Library.md  Manifest.md  Quickstart.md  Selectors.md  Variants.md
docs/extensions/: Arbitrageur.md  AttackMigrate.md  Graphviz.md  Guidance.md  Partials.md  Sigma.md  Vectr.md
docs/scripts/: Arbitrageur.md  Cli.md  Darkpool.md
libmm/: checks.py  config.py  extension.py  index.py  inject.py  log.py  mitre.py  selectors.py  sql.py  type.py  utils.py
libmm/data/: tids.txt
libmm/extensions/: arbitrageur.py  attackmigrate.py  graphviz.py  guidance.py  partials.py  sigma.py  vectr.py
libmm/scripts/: mmarbitrageur.py  mmcli.py  mmdarkpool.py  shared.py
libmm/scripts/mmarbitrageur/: shared.py
libmm/scripts/mmdarkpool/templates/: base.html.j2  blueprint.html.j2  blueprints.html.j2  variant.html.j2  variants.html.j2
resources/: navigator.dockerfile
